# python-discord-webhook

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGES.md  LICENSE  Makefile  README.md  example.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: code-format.yml  python-package.yml
discord/: webhook.py
discord_webhook/: __init__.py  __main__.py  async_webhook.py  components.py  constants.py  webhook.py  webhook_exceptions.py
examples/: attachment_in_embeds.py  basic_webhook.py  embedded_content.py  manage_rate_limits.py  multiple_webhook_urls.py  send_files.py  timeout.py  use_async.py  use_proxy.py
tests/: test_discordwebhook.py  test_embed.py  test_webhook.py
tests/components/: test_action_row.py  test_button.py  test_component.py
