[tool.poetry]
name = "discord-webhook"
version = "1.1.0"
description = "Easily send Discord webhooks with Python"
authors = ["lovvskillz <14542790+lovvskillz@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "discord_webhook"}]
repository = "https://github.com/lovvskillz/python-discord-webhook"
keywords = ["discord", "webhook"]


[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
httpx = { version = "^0.23.0", optional = true }

[tool.poetry.extras]
async = ["httpx"]

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pre-commit = "^3.3.2"
types-requests = "^2.28.11.4"
pytest = "^7.3.2"
ruff = "^0.0.272"

[tool.poetry.scripts]
discord_webhook = "discord_webhook.__main__:main"

[tool.black]
line-length = 88
preview = true
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | frontend
)/
'''

[tool.ruff]
line-length = 88
ignore = ["E501"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
