[tool.poetry]
name = "discord-webhook"
version = "1.4.1"
description = "Easily send Discord webhooks with Python"
authors = ["lovvskillz <14542790+lovvskillz@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "discord_webhook"}]
repository = "https://github.com/lovvskillz/python-discord-webhook"
keywords = ["discord", "webhook"]


[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
httpx = { version = "^0.28.1", optional = true }

[tool.poetry.extras]
async = ["httpx"]

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
types-requests = "^2.28.11.4"
pytest = "^7.4.0"
ruff = "^0.1.15"

[tool.poetry.scripts]
discord_webhook = "discord_webhook.__main__:main"

[tool.ruff]
line-length = 88
ignore = ["E501"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
